css/stylesheet-id.css
/* ... */
    #topbar > span:first-child {
      position: relative;
      -webkit-flex-basis: initial;
          -ms-flex-preferred-size: initial;
              flex-basis: initial;
      margin: 0 5px;
    }

  #topbar > span > a {
    width: 100%;
    height: 100%;
  }

    #topbar > span:first-child > span {
      border-left: 1.5px solid white;
      margin: .1em .3em;
      padding-left: .3em;
    }

    #topbar > span:first-child > span:first-child {
      border-left: 0 !important;
    }

    #versepickerwrapper {
      white-space: unset;
      overflow: unset;
      -o-text-overflow: unset;
         text-overflow: unset;
      max-width: 87.5vw;
      padding: inherit 1em;
    }

    #applybook {
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
    }

    #applybook .selector {
      margin: .11rem;
      white-space: nowrap;
      border-left: 1.5px solid white;
      padding-left: .2em;
    }

    #applybook .selector:nth-of-type(1),
    #applybook .selector:nth-last-of-type(1),
    #applybook .selector:nth-last-of-type(2) {
      border-left: 0 !important;
      padding-left: 0 !important;
    }

    #applybook .selector a {
      padding: 0 5px;
      background-color: #ddd1;
      border-radius: 3px;
      transition: all 250ms;
    }

    #applybook .selector:nth-last-of-type(2) a,
    #applybook .selector:nth-last-of-type(1) a {
      background-color: #823a9c !important;
      color: #fff;
    }

  #applyverse,
  #applychapter {
    white-space: normal;
  }

  #topbar.wrap-active {
    -webkit-flex-wrap: wrap;
        -ms-flex-wrap: wrap;
            flex-wrap: wrap;
  }

    #topbar.wrap-active > span {
      flex-grow: 1;
    }
/* END OF CONTAINER STYLING */


/* TEXT AND TEXT CONTAINER STYLING */
h1, h2, h3, h4, h5, h6,
#name1,
#name2,
#name3,
#topbar,
#editorinnerheader {
  font-family: sans-serif;
}

h1, h2, h3, h4, h5, h6 {
  margin: .5em 0;
  font-weight: bold;
}

h1 {
  font-size: 2em;
}

h2 {
  font-size: 1.5em;
}

h3 {
  font-size: 1.3em;
}

h4 {
  font-size: 1.1em;
}

h5 {
  font-size: .9em;
}

h6 {
  font-size: .7em;
}

i, em {
  font-style: italic;
}

b, strong {
  font-weight: bold;
}

strong {
  color: #488B9B;
}

a:link {
  background: none;
  color: blue;
  text-decoration: none;
}

a:visited {
  color: blue;
}

a:hover {
  text-decoration: underline;
}

a:focus,
a:active {
  color: red;
}

.error {
  color: red;
  font-weight: bold;
}

.success {
  color: green;
  font-weight: bold;
}

.active {
  font-weight: bold;
  font-size: larger;
}

textarea {
  width: 100%;
  height: 20em;
}

.fullheight {
  height: 100%;
}

.width100 {
  width: 100%;
}

.width75 {
  width: 75%;
}

.width50 {
  width: 50%;
}

.topalign {
  vertical-align: top;
}

.selected {
  background: #FFC;
}

.small {
  font-size: small;
}

.center {
  text-align: center;
}

@font-face {
  font-family: "Ezra SIL";
  src: url(/fonts/SILEOT.ttf);
}

.hebrew {
  font-family: "Ezra SIL";
  direction: rtl;
  line-height: 1.8;
}

@font-face {
  font-family: "Cardo";
  src: url(/fonts/Cardo-Regular.ttf);
}

.greek {
  font-family: Cardo;
}

.clearfix {
  clear: both;
  display: none;
}
/* END OF TEXT AND TEXT CONTAINER STYLING */


#breadcrumbs:not(:empty) {
  margin: .2em 0;
  padding: .2em 0;
  border-top: 2px dotted #aaa;
}
.menu-basic a {
  padding: 0 .4em;
  border-style: solid;
  text-decoration: none!important;
  -webkit-appearance: button;
     -moz-appearance: button;
          appearance: button;
}
.menu-advanced span {
  margin-right: 0.2em;
}
.previousverse {
  margin-right: 0.1em;
  padding-right: 0.1em;
}
.selectverse {
  margin-right: 0.1em;
  margin-left: 0.1em;
  padding-right: 0.1em;
  padding-left: 0.1em;
}
.nextverse {
  margin-left: 0.1em;
  padding-left: 0.1em;
}

.nextresource {
  page-break-inside: avoid;
  orphans: 3;
  widows: 2;
}
#workspacewrapper {
  padding: 0.5em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display:         flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex: 1;
      -ms-flex: 1;
          flex: 1;
          overflow: auto;
}
#workspacewrapper > * {
  -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
          flex-shrink: 0;
  border-radius: 5px;
}
#workspacewrapper > #workspaces {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display:         flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-flex: 1;
  margin: -0.5em;
  width: calc(100% + 1em);
  -webkit-flex: 1;
      -ms-flex: 1;
          flex: 1;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
          align-content: stretch;
}
.iframewrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display:         flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
      -ms-flex-direction: row;
          flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
          flex-shrink: 1;
  height: 1em;
  border-top: 2px inset;
  border-bottom: 2px inset;
  -webkit-flex: 1;
      -ms-flex: 1;
          flex: 1;
}
.iframewrapper iframe {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
          flex-grow: 2;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
          flex-shrink: 1;
  width: 1em;
  border: none;
}
.iframewrapper iframe + iframe {
  border-left: 2px inset;
}
/* The following is to cause the iframes to fill all available space in Edge. */
iframe {
  width: 100%;
  height: 100%;
}
.drag {
  cursor: move;
}
/* ... */

